--- a/src/main/resources/application-example.yaml
+++ b/src/main/resources/application-example.yaml
@@ -17,3 +17,6 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.OracleDialect
+
+jwt:
+  signerKey: ${SIGNER_KEY}
