--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <projectlombok-lombok.version>1.18.32</projectlombok-lombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <spotless.version>2.43.0</spotless.version>
     </properties>
 
     <dependencies>
@@ -132,25 +133,33 @@
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
                 <artifactId>spotless-maven-plugin</artifactId>
-                <version>2.43.0</version>
-
+                <version>${spotless.version}</version>
                 <configuration>
                     <java>
-                        <googleJavaFormat>1.22.0</googleJavaFormat>
-                        <target>src/main/java/**/*.java,src/test/java/**/*.java</target>
+                        <removeUnusedImports/>
+                        <toggleOffOn/>
+                        <trimTrailingWhitespace/>
+                        <endWithNewline/>
+                        <indent>
+                            <tabs>true</tabs>
+                            <spacesPerTab>4</spacesPerTab>
+                        </indent>
+                        <palantirJavaFormat/>
+                        <importOrder>
+                            <!-- Specify either order or file, but not both -->
+                            <order>java,jakarta,org,com,com.diffplug,</order>
+                        </importOrder>
                     </java>
                 </configuration>
-
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>apply</goal>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <!--				<executions>-->
+                <!--					<execution>-->
+                <!--						<phase>compile</phase>-->
+                <!--						<goals>-->
+                <!--							<goal>check</goal>-->
+                <!--						</goals>-->
+                <!--					</execution>-->
+                <!--				</executions>-->
             </plugin>
-
         </plugins>
     </build>
 
